--- a/index.html
+++ b/index.html
@@ -4,46 +4,54 @@
     <meta charset=UTF-8>
     <meta name=viewport content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel=stylesheet href=./public/css/app.css> -->
+    <link rel=stylesheet href=./public/css/app.css>
     <link rel=stylesheet href=./node_modules/@fortawesome/fontawesome-free/css/all.css>
 
 </head>
 <body>
 
-    <!-- header  -->
-    <header>
-        <!-- navbar if needed -->
-        <nav>
 
-        </nav>
-        <!-- end navbar -->
+    <div class="container">
 
-    </header>
-    <!-- end header -->
+        <div class="box">
 
-    <!-- main  -->
-    <main>
-        <!-- sections if needed  -->
-        <section>
+            <div class="box1">
 
-        </section>
+                <div class="top">
+                    <i class="fa-brands fa-x-twitter fa-5x"></i>
+                </div>
+                <div class="counter" id="cpt1">
+                    0000
+                </div>
+            </div>
+            <div class="box2">
+                <div class="top">
+                    <i class="fa-brands fa-youtube fa-5x"></i>                
+                </div>
+                <div class="counter" id="cpt2">
+                    0000
+                </div>
 
-    </main>
-    <!-- end main  -->
+            </div>
+            <div class="box3">
+                <div class="top">
+                    <i class="fa-brands fa-facebook fa-5x"></i>                
+                </div>
+                <div class="counter" id="cpt3">
+                    0000
+                </div>
+
+            </div>
+        </div>
 
 
-    <!-- footer -->
-    <footer>
-
-
-    </footer>
-    <!-- end footer  -->
+    </div>
 
 
     <!-- scripts for bootstrap and popper js to make functional -->
     <!--<script src=./node_modules/@popperjs/core/dist/umd/popper.js></script> -->
     <!--<script src=./node_modules/bootstrap/dist/js/bootstrap.js></script> -->
-    <!--<script src=./public/js/app.js></script> -->
+    <script src=./public/js/app.js></script>
     
 </body>
 </html>
