--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <div class="counter" id="cpt1">
                     0000
                 </div>
+                <div class="bottom">
+                    <p>Twitter Fans</p>
+                </div>
             </div>
             <div class="box2">
                 <div class="top">
@@ -30,6 +33,9 @@
                 </div>
                 <div class="counter" id="cpt2">
                     0000
+                </div>
+                <div class="bottom">
+                    <p>Youtube Fans</p>
                 </div>
 
             </div>
@@ -39,6 +45,9 @@
                 </div>
                 <div class="counter" id="cpt3">
                     0000
+                </div>
+                <div class="bottom">
+                    <p>Facebook Fans</p>
                 </div>
 
             </div>
